project(ThunderEgg_Apps)

find_path(_vtkc NAMES FindVTK.cmake VTKConfig.cmake)
if(_vtkc)
  find_package(VTK)
endif()
if(VTK_FOUND)
  set(CMAKE_CXX_FLAGS "-DHAVE_VTK ${CMAKE_CXX_FLAGS}")
  message("-- VTK found, enabling vtk output")
endif()
if(TARGET P4EST::P4EST)
  set(CMAKE_CXX_FLAGS "-DHAVE_P4EST ${CMAKE_CXX_FLAGS}")
endif(TARGET P4EST::P4EST)

if(PETSC_FOUND AND Zoltan_FOUND)
  add_subdirectory(shared)
  # add_subdirectory(steady2d)
  add_subdirectory(var2d)
endif(PETSC_FOUND AND Zoltan_FOUND)
  # add_subdirectory(steady3d)
if(Zoltan_FOUND)
  add_subdirectory(2DPoissonGMG)
  add_subdirectory(3DPoissonGMG)
endif(Zoltan_FOUND)
