project(ThunderEgg_Apps)

find_path(_vtkc NAMES FindVTK.cmake VTKConfig.cmake)
if(_vtkc)
  find_package(VTK)
endif()
if(VTK_FOUND)
  set(CMAKE_CXX_FLAGS "-DHAVE_VTK ${CMAKE_CXX_FLAGS}")
  message("-- VTK found, enabling vtk output")
endif()
if(TARGET P4EST::P4EST)
  set(CMAKE_CXX_FLAGS "-DHAVE_P4EST ${CMAKE_CXX_FLAGS}")
  add_subdirectory(shared)
endif(TARGET P4EST::P4EST)

if(TARGET PETSC::PETSC AND TARGET P4EST::P4EST)
  # add_subdirectory(steady2d)
  add_subdirectory(var2d)
endif(TARGET PETSC::PETSC AND TARGET P4EST::P4EST)
  # add_subdirectory(steady3d)
if(TARGET P4EST::P4EST)
  add_subdirectory(2DPoissonGMG)
endif(TARGET P4EST::P4EST)
if(TARGET P4EST::P8EST)
  add_subdirectory(3DPoissonGMG)
endif(TARGET P4EST::P8EST)
